[project]
name = "github-actions-python-fastapi"
version = "0.1.0"
description = "FastAPI Pokemon API with CI/CD, Docker, and Neon DB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "pytest>=8.3.5",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
venv = ".venv"
